Add built-by and custom  classpath.

--- a/pom.xml
+++ b/pom.xml
@@ -40,10 +40,14 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>express.regular.hive.HiveTester</mainClass>
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>lib/</classpathPrefix>
+                            <mainClass>express.regular.hive.HiveTester</mainClass>
                         </manifest>
+                        <manifestEntries>
+                            <Built-By>bdh92123</Built-By>
+                            <Class-Path>. lib/custom.jar</Class-Path>
+                        </manifestEntries>
                     </archive>
                 </configuration>
             </plugin>
