--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
     <groupId>express.regular</groupId>
     <artifactId>hive</artifactId>
     <version>master</version>
+    <properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+	</properties>
     <build>
         <plugins>
             <plugin>
